Moved encoding to Codecs.